--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -29,6 +29,7 @@ block content
         svg.c-title-bg
           use(xlink:href='assets/img/sprite.svg#about_header')
         .c-half-block__pic
+          img.pic__image(src='/assets/img/hero.png')
         .c-subtitle Кто я
         .c-half-block__description
           p Я веб разработчик из Москвы. Мне 26 лет. Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
