--- a/source/style/common/half-blocks.scss
+++ b/source/style/common/half-blocks.scss
@@ -1,19 +1,27 @@
 .c-full-block {
   width: 100%;
+  height: 185px;
   position: relative;
+  background:#faf8f0;
   &__triangle {
-    height: 287px;
-    width: 100%;
-    position: relative;
+    height: 105px;
+    width: 50%;
+    position: absolute;
     top: -105px;
-    margin-bottom: -186px;
+
+    left: 0px;
+    &.triangle_right {
+      right: 0px;
+      left: inherit;
+    }
+    margin-bottom: -90px;
     fill: #faf8f0;
   }
   .c-title-bg {
-    top: -167px;
+    top: -60px;
   }
   .c-title {
-    top: -35px;
+    top: 65px;
   }
 }
 .c-title-bg {
@@ -42,7 +50,7 @@
     background: #373e42;
     opacity:.2;
     position: absolute;
-    top: 34px;
+    top: calc(50% - 2px);
   }
   &:before {
     left:-30px;
@@ -64,15 +72,9 @@
       margin-top: 32px;
       margin-bottom: 32px;
     }
-    &__button-place {
-      width: 100%;
-      position: relative;
-      height: 45px;
-      padding-top: 8px;
-    }
+
     .c-button {
-      position: absolute;
-      @include centeredX();
+      align-self: center;
     }
     &_mbottom {
       padding-bottom: 0px!important;
@@ -105,12 +107,13 @@
       }
     }
     &__pic {
-      background-image: url('/assets/img/hero.png');
-      background-size: cover;
       position: relative;
       @include centeredX();
       width: 444px;
       height: 444px;
+      .pic__image {
+        width: 100%;
+      }
     }
 
     &__description{
@@ -140,16 +143,16 @@
     &__skills{
       list-style:none;
       display: flex;
-      padding-left: 39px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding-left: 21px;
       padding-right: 5px;
       .c-skills__skill {
         display: inline-block;
-        margin-right: 33px;
+        margin-right: 18px;
+        margin-left: 18px;
         position: relative;
         text-align: center;
-        &:last-child {
-          margin-right:0px;
-        }
       }
     }
 
