--- a/source/style/common/responsive.scss
+++ b/source/style/common/responsive.scss
@@ -1,4 +1,10 @@
 @media (max-width: 768px) {
+  .parallax_layer {display: none;}
+  #parallax {
+    background: url('../img/background.png');
+    background-position: center;
+    background-size: cover;
+  }
   .c-copy.c-copy_welcome-copy {
     margin-bottom: 2rem;
   }
@@ -9,6 +15,13 @@
     height: 508px;
     &__arrow {
       bottom: 48px;
+    }
+  }
+  .c-full-block {
+    &__triangle{
+      height: 68px;
+      margin-bottom: -68px;
+      top: -68px;
     }
   }
   .l-content {
@@ -64,6 +77,7 @@
     }
     .c-half-block__description {
       margin: 12px 106px 0px 106px!important;
+
     }
 
     .c-half-block__h3 {
@@ -90,6 +104,10 @@
     }
   }
 
+  .l-callback .l-header__arrow {
+    bottom: 240px;
+  }
+
   .footer {
     height: 212px;
     margin-top: -212px;
@@ -108,14 +126,28 @@
       height: initial;
     }
     .c-bottom__description {
-      margin: 17px 0;
-
+      margin: 17px 24px;
+      max-width: 100%;
       text-align: center;
     }
     .c-copy_footer {
       margin: 0px;
-      ext-align: center;
+      text-align: center;
     }
+  }
+  .l-header__portfolio {
+    display: none;
+  }
+  .l-content .c-half-block_mbottom {
+    order: -1;
+  }
+
+  .l-blog-lnav {
+    display:none;
+  }
+  .c-blog-articles {
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
 }
@@ -127,7 +159,165 @@
       margin-right: 0px;
     }
   }
-  .c-half-block__pic {
-    width: 100%!important;
+  .front, .back {
+    width: 100%;
   }
+
+  .l-welcome-box {
+    width: calc(100% - 20px);
+  }
+  .c-copy.c-copy_welcome-copy {
+    margin-bottom: 10px;
+  }
+  .l-header .c-socials_header {
+    left: 10px;
+    top: 10px;
+  }
+  .c-socials__social-icon {
+    padding: 0px 14px;
+    &:first-child{padding-left: 0px}
+    .c-social-icon__svg {width: 22px}
+  }
+  .l-header .c-header__menu {
+    right: 10px;
+    top: 10px;
+    width: 25px;
+    height: 22px;
+  }
+  .l-header__hero {
+    width: 100%;
+  }
+  .c-hero_theme_light .c-hero__title {
+    font-size: 20px;
+  }
+
+  .c-full-block {
+    height: 97px;
+    &__triangle {
+      height: 27px;
+      top: -27px;
+    }
+    .c-title {
+      font-size: 35px;
+      top: 12px;
+    }
+    .c-title-bg {
+      height: 90px;
+      top: -110px;
+    }
+  }
+  .c-accent-title {
+    margin: 0px 10px;
+  }
+  .l-callback {
+    .c-title {
+      font-size: 35px;
+      top: 12px;
+      max-width: 165px;
+      margin-top: 34px;
+    }
+    .c-title-bg {
+      height: 90px;
+      top: -85px;
+    }
+    .c-feedback {
+      margin-top: 75px;
+      &__feedback-block {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-bottom: 15px;
+        width: 100%;
+        .fa-quote-left {
+          align-self: center;
+        }
+      }
+
+    }
+    .c-subtitle {
+      max-width: 150px;
+    }
+    .c-galign {
+      flex-direction: column;
+    }
+    &__callback-place {
+      width: 90%;
+      margin-bottom: 370px;
+    }
+    .l-header__arrow {
+      bottom: 300px;
+    }
+  }
+    .l-content {
+    .c-half-block__triangle {
+      height: 27px;
+      top: -27px;
+    }
+    .c-title {
+      font-size: 34px;
+      margin-top: 25px;
+    }
+    .c-half-block {
+      &__description {
+        margin: 12px 10px 0px 10px!important;
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+      &__skills {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+      &__pic {
+        width: 100%!important;
+        height: auto !important;
+      }
+      .c-subtitle {
+        font-size: 20px;
+        margin-top: 22px;
+        max-width: 125px;
+      }
+    }
+
+  }
+
+  .l-map {
+    display: flex;
+    flex-direction: column;
+    height: 972px;
+    .c-contacts {
+      order: -1;
+      position:initial;
+      min-width: 100%;
+      transform: initial;
+      padding: 35px 10px 0px 10px;
+      &__contact-list {
+        margin-left: 0px;
+      }
+    }
+  }
+  .c-maps {
+    overflow: hidden;
+    order: 1;
+    width: 100%;
+    position: relative !important;
+  }
+
+  .footer {
+    height: 255px;
+    margin-top: -255px;
+    .c-nav__item {
+      padding: 28px 5px;
+    }
+    .c-bottom__description {
+      margin: 17px 10px;
+    }
+    .c-copy_footer {
+      margin: 0px 10px;
+    }
+    .c-bottom__description,.c-copy_footer, .c-nav__item  {
+      font-size: 13px;
+      line-height: 1.5;
+    }
+  }
+
+
 }
