--- a/source/style/common/slider.scss
+++ b/source/style/common/slider.scss
@@ -19,16 +19,25 @@
     cursor:pointer;
     position: relative;
     //background: #b6b4ae;
+    &:hover .l-left__bg,&:hover .l-right__bg {
+      opacity: .8;
+    }
+    &:hover .l-left__arrow {
+      top: 70%!important;
+    }
+    &:hover .l-right__arrow {
+      top:30%!important;
+    }
     .l-left__bg, .l-right__bg {
       background: #b6b4ae;
       opacity: .7;
       transition: .5s;
       width: 100%;
       height: 100%;
-      &:hover {
-        opacity: .8;
-      }
+
     }
+
+
     .l-left__preview, .l-right__preview{
       max-height: 214px;
       max-width: 100%;
@@ -38,6 +47,7 @@
     .l-left__arrow, .l-right__arrow {
       width: 43px;
       height: 27px;
+      transition: .5s;
       fill: #fff;
       position: absolute;
       @include centered();
