--- a/source/style/common/welcome-box.scss
+++ b/source/style/common/welcome-box.scss
@@ -6,7 +6,7 @@
   margin-bottom: auto;
   margin-top: auto;
   overflow: hidden;
-  height: 350px;
+  //height: 350px;
   perspective: 1000px;
   &.hover .flipper {
     transform: rotateY(180deg);
