--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -32,11 +32,11 @@ block content
       svg.c-title-bg
         use(xlink:href='assets/img/sprite.svg#works_header')
     .l-content
-      .c-half-block.c-half-block_left(style='display: flex;')
+      .c-half-block.c-half-block_left.c-slider-description
         .c-slider-display
           img.c-slider-main-image(src='/assets/img/slider/work-1.png')
         .c-valign
-          .c-subtitle(style="max-width: 267px;") Сайт школы онлайн образования
+          .c-subtitle Сайт школы онлайн образования
           .c-accent-title HTML, CSS, JAVASCRIPT
           a.c-button
             i.fa.fa-link(aria-hidden='true')
