--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -8,6 +8,9 @@
   box-sizing: border-box;
   font-family: "Roboto Regular";
 }
+.c-slider-description {
+  display: flex;
+}
 .c-galign {
   width: 100%;
   display: flex;
