--- a/source/style/common/blog.scss
+++ b/source/style/common/blog.scss
@@ -23,6 +23,11 @@
   top: -160px;
   margin-bottom: -215px;
 }
+
+.c-full-block.c-full-block_blog {
+  background: #fff;
+  height: 115px;
+}
 .triangle_white {
   fill: #fff;
 }
