--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -23,9 +23,11 @@ block content
         svg.c-title-bg.c-title-bg_white
           use(xlink:href='assets/img/sprite.svg#blog_header')
 
-    .c-full-block
-      svg(viewBox="0 0 1000 287" preserveAspectRatio="none").c-full-block__triangle.triangle_white
-        polygon(points="0,0 0,287 1000,287 1000,0 500,105")
+    .c-full-block.c-full-block_blog
+        svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-full-block__triangle.triangle_white
+            polygon(points="0,0 0,100 1000,100")
+        svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-full-block__triangle.triangle_right.triangle_white
+            polygon(points="1000,0 1000,100 0,100")
 
 
     .l-content.l-content_margin
