--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -22,6 +22,8 @@ block content
         .c-title-description Статьи, которые я написал
         svg.c-title-bg.c-title-bg_white
           use(xlink:href='assets/img/sprite.svg#blog_header')
+      svg.l-header__arrow
+          use(xlink:href='assets/img/sprite.svg#portf_arrow_down')
 
     .c-full-block.c-full-block_blog
         svg(viewBox="0 0 1000 100" preserveAspectRatio="none").c-full-block__triangle.triangle_white
