--- a/source/template/common/map.pug
+++ b/source/template/common/map.pug
@@ -112,7 +112,7 @@ script.
             disableDoubleClickZoom: true,
             mapTypeControl: false,
             scaleControl: true,
-            scrollwheel: true,
+            scrollwheel: false,
             streetViewControl: false,
             draggable : true,
             clickableIcons: false,
