--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -32,7 +32,7 @@ block content
             polygon(points="1000,0 1000,100 0,100")
 
 
-    .l-content.l-content_margin
+    .l-content.l-content_margin.l-content_center
       .l-blog-lnav
         ul.l-blog-lnav__list
           li.l-blog-lnav__item.item_active Самое важное в SASS
