--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -30,79 +30,122 @@
   min-height:1287px;
   width: 100%;
   position: relative;
-  background-image: url('/assets/img/works.png');
-  background-size: cover;
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  .c-title {
-    max-width: 300px;
-    margin-top: 56px;
-  }
-  .c-title.c-title_about {
-    position: inherit;
-    transform: inherit;
-    left: inherit;
-  }
-  .c-title-bg {
-    height: 174px;
-    top: -173px;
-  }
-  .c-feedback {
+  overflow: hidden;
+
+
+  &__bg {
+    position: absolute;
     width: 100%;
+    top: 0px;
+  }
+  .l-callback__container {
     display: flex;
-    &__feedback-block {
-      &:first-child {
-        padding-left: 20px;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    flex-direction: column;
+    .c-title {
+      max-width: 300px;
+      margin-top: 56px;
+      &.c-title_about {
+        position: inherit;
+        transform: inherit;
+        left: inherit;
       }
-      width: 400px;
-      flex-direction: column;
+    }
+
+    .c-title-bg {
+      height: 174px;
+      top: -173px;
+    }
+    .c-feedback {
+      width: 100%;
       display: flex;
-      float: left;
-      font-family: "Roboto Regular";
-      font-size: 16px;
-      color: $h2_color;
-      padding-right: 20px;
-      .c-feedback-block__text {
-        line-height: 1.5;
-      }
-      .c-feedback-block__autor {
-        width: 100%;
-        position: relative;
-        margin-top: 23px;
-      }
-      .c-autor__avatar {
-        width: 78px;
-        height: 78px;
-        border-radius: 39px;
-        background-size: contain;
-        margin-right:20px;
-        display: inline-block;
-
-      }
-
-      .c-autor__name {
-        font-family: "Roboto Bold";
-        font-size: 16px;
-        position: absolute;
-        display: inline-block;
-        @include centeredY();
-        color: $main_color;
-      }
-      .c-autor__position {
+      &__feedback-block {
+        &:first-child {
+          padding-left: 20px;
+        }
+        width: 400px;
+        flex-direction: column;
+        display: flex;
+        float: left;
         font-family: "Roboto Regular";
         font-size: 16px;
-        color: $main_color;
+        color: $h2_color;
+        padding-right: 20px;
+        .c-feedback-block__text {
+          line-height: 1.5;
+        }
+        .c-feedback-block__autor {
+          width: 100%;
+          position: relative;
+          margin-top: 23px;
+        }
+        .c-autor__avatar {
+          width: 78px;
+          height: 78px;
+          border-radius: 39px;
+          background-size: contain;
+          margin-right:20px;
+          display: inline-block;
+
+        }
+
+        .c-autor__name {
+          font-family: "Roboto Bold";
+          font-size: 16px;
+          position: absolute;
+          display: inline-block;
+          @include centeredY();
+          color: $main_color;
+        }
+        .c-autor__position {
+          font-family: "Roboto Regular";
+          font-size: 16px;
+          color: $main_color;
+        }
+
+        .fa-quote-left {
+          color: $h2_color;
+          margin-bottom: 22px;
+          opacity: .2;
+          font-size: 36.05px;
+        }
+      }
+    }
+
+    .c-bottom-buttons {
+      display: flex;
+      position: relative;
+      bottom: 0rem;
+      width: calc(100% + 40px);
+      top: 20px;
+      left: -20px;
+      list-style: none;
+      height: 45px;
+      color: #fff;
+      font-family: "Roboto Medium";
+      font-size: 16px;
+      margin: 0px;
+      padding: 0px;
+      &__button {
+        width: 100%;
+        text-align: center;
+        display: flex;
+        margin: 0px;
+        cursor: pointer;
+        &:first-child .c-button__link {
+          border-radius: 0px 0px 0px 4px;
+          border-left: none;
+        }
+        &:last-child .c-button__link {
+          border-radius: 0px 0px 4px 0px;
+        }
       }
 
-      .fa-quote-left {
-        color: $h2_color;
-        margin-bottom: 22px;
-        opacity: .2;
-        font-size: 36.05px;
-      }
+    }
+    .l-header__arrow {
+      bottom: 207px;
     }
   }
   &__callback-place {
@@ -113,7 +156,7 @@
     overflow: hidden;
     border-radius: 4px 4px 0px 0px;
     position: relative;
-    margin-bottom: 225px;
+    margin-bottom: 250px;
     .blur {
       position: absolute;
       width: 100%;
@@ -143,45 +186,5 @@
   }
   &__message {
     resize: none;
-  }
-  .c-bottom-buttons {
-    display: flex;
-    position: relative;
-    bottom: 0rem;
-    width: calc(100% + 40px);
-    top: 20px;
-    left: -20px;
-    list-style: none;
-    height: 45px;
-    color: #fff;
-    font-family: "Roboto Medium";
-    font-size: 16px;
-    margin: 0px;
-    padding: 0px;
-    &__button {
-      width: 100%;
-      text-align: center;
-      display: block;
-      float:left;
-      margin: 0px;
-      cursor: pointer;
-      transition: .5s;
-      border-left: 2px solid transparentize(#dee3e7, .5);
-      background:  transparentize($main_color, .15);
-      padding:14px 0px;
-      &:first-child {
-        border-radius: 0px 0px 0px 4px;
-        border-left:none;
-      }
-      &:last-child {
-        border-radius: 0px 0px 4px 0px;
-      }
-      &:hover {
-        background: transparentize($hover_main_color, .15);
-      }
-    }
-  }
-  .l-header__arrow {
-    bottom: 207px;
   }
 }
