blog js complete

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -85,6 +85,7 @@ a {
 }
 @import 'common/prettify';
 @import 'common/welcome';
+@import 'common/preloader';
 @import 'common/about';
 @import 'common/skills';
 @import 'common/contacts';
