--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -2,7 +2,7 @@ extends ../_template
 include ../common/_mixins
 block variables
   - var title = 'Портфолио Мирошина Павла::Обо мне'
-
+  - var script = 'arrow.init(".l-header__arrow",".c-title-bg");'
 block content
   .wrapper
     .l-header
