--- a/source/template/pages/blog.pug
+++ b/source/template/pages/blog.pug
@@ -3,7 +3,7 @@ include ../common/_mixins
 
 block variables
   - var title = 'Портфолио Мирошина Павла::Блог'
-
+  - var script = 'arrow.init(".l-header__arrow",".c-blog-articles");blog.init();'
 block content
   .wrapper
     .l-header.l-header_blog
@@ -35,51 +35,7 @@ block content
     .l-content.l-content_margin.l-content_center
       .l-blog-lnav
         ul.l-blog-lnav__list
-          li.l-blog-lnav__item.item_active Самое важное в SASS
-          li.l-blog-lnav__item Приёмы в вёрстке, без которых не обходится ни один сайт
-          li.l-blog-lnav__item Самое важное в SASS
       .c-blog-articles
-          .c-blog-article
-            .c-blog-article__subtitle Самое важное в SASS
-            .c-blog-article__date 22 ноября 2016
-            .c-blog-article__text
-              p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития.
-               |Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи!
-               |новая модель организационной деятельности играет важную роль в формировании систем массового участия.
-              p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов)
-               |участие в формировании систем массового участия. Идейные соображения высшего порядка,
-               | а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании
-               | позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост
-               |и сфера нашей активности способствует подготовки и реализации модели развития.
-               |С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров,
-               | соответствует насущным потребностям.
-              pre.prettyprint(class='linenums lang-js').
-                //присвоить
-                $(document).data('prop', { anything: "любой обьект"})
-
-                //прочитать
-                alert( $(document).data('prop').anything ) // любой обьект
-          .c-blog-article
-              .c-blog-article__subtitle Приёмы в вёрстке, без которых не обходится ни один сайт
-              .c-blog-article__date 13 ноября 2016
-              .c-blog-article__text
-                  p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития.
-                      | Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи!
-                      | новая модель организационной деятельности играет важную роль в формировании систем массового участия.
-                  p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов)
-                      | участие в формировании систем массового участия. Идейные соображения высшего порядка,
-                      | а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании
-                      | позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост
-                      | и сфера нашей активности способствует подготовки и реализации модели развития.
-                      | С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров,
-                      | соответствует насущным потребностям.
-                  pre.prettyprint(class='linenums lang-js').
-                      //присвоить
-                      $(document).data('prop', { anything: "любой обьект"})
-
-                      //прочитать
-                      alert( $(document).data('prop').anything ) // любой обьект
 
 
   include ../common/footer
-  script(src='/assets/js/app.js' defer)
