--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -2,9 +2,13 @@ extends ../_template
 include ../common/_mixins
 block variables
   - var title = 'Портфолио Мирошина Павла'
-  - var script = 'parallax();'
+  - var script = 'welcome.init()'
 
 block content
+  .preloader
+    .preloader__container
+      .preloader__animation
+      .preloader__proc 0%
   .l-background#parallax
     .parallax_layer
       img(src='./assets/img/parallax/parallax-1.png')
