js form validate in progress..

--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -71,6 +71,6 @@ block content
           ul.c-side-content__welcome-buttons
             +menuItem('l-welcome-buttons__button','c-button__link',[{title: "На главную", link: "index.html"}, {
                 title: 'Войти',
-                link: 'login.html'
+                link: '#'
             }])
     .c-copy.c-copy_welcome-copy © Павел Мирошин | создано с любовью в LoftSchool | 2017
