--- a/source/style/common/checkbox.scss
+++ b/source/style/common/checkbox.scss
@@ -74,3 +74,63 @@ input, textarea {outline: none;}
     background:$main_color;
   }
 }
+.input-w-icon {
+  border: 1px solid #fff;
+  height: 45px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: #fff;
+  padding-left: 10px;
+  width: calc(100% - 85px);
+  margin: 0px 20px;
+  margin-left: 65px;
+
+}
+
+.input-icon {
+  background: #f0efe9;
+  height: 45px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  display: inline-block;
+  position: absolute;
+  left: 20px;
+  width: 45px;
+  &.error + .input-w-icon {
+    border: 1px solid $error_color;
+    color: $error_color;
+  }
+  &.error .fa {color: $error_color;}
+  &.valide + .input-w-icon {
+    border: 1px solid $main_color;
+    color: $h2_color;
+  }
+  &.valide .fa {color: $main_color}
+  .fa {
+    color: #c4cbcd;
+    position: absolute;
+    @include centered();
+  }
+}
+
+.c-popup-error {
+  position: absolute;
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  padding: 10px 20px;
+  display: none;
+  background: $error_color;
+  &:before {
+    content: '';
+    background: $error_color;
+    width: 10px;
+    display: block;
+    height: 10px;
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    transform: rotate(45deg) translateX(-50%);
+
+  }
+}
