--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -95,5 +95,6 @@ a {
 @import 'common/slider';
 @import 'common/blog';
 @import 'common/checkbox';
+@import 'common/menu';
 
 @import 'common/responsive';
