--- a/source/style/common/checkbox.scss
+++ b/source/style/common/checkbox.scss
@@ -121,8 +121,8 @@ input, textarea {outline: none;}
 }
 
 .c-input-not-icon.valide {
-  border: 1px solid $error_color;
-  color: $error_color;
+  border: 1px solid $main_color;
+  color: $h2_color;
 }
 
 .c-popup-error {
@@ -132,6 +132,7 @@ input, textarea {outline: none;}
   text-align: center;
   padding: 10px 20px;
   display: none;
+  z-index: 900;
   background: $error_color;
   &:before {
     content: '';
