--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -4,6 +4,7 @@ block variables
   - var title = 'Портфолио Мирошина Павла::Обо мне'
   - var script = 'arrow.init(".l-header__arrow",".c-title-bg");'
 block content
+  +menu()
   .wrapper
     .l-header
       .l-header__bg
@@ -15,8 +16,8 @@ block content
             {icon: "github", link: "http://github.com"},
             {icon: "in", link: "http://linked.in"}
         ])
-      svg.c-header__menu
-        use(xlink:href='assets/img/sprite.svg#hamburger')
+      a.c-header__menu(href='javascript:menu.init()')
+        span
       .l-header__hero
         +hero('c-hero_theme_light',true)
       svg.l-header__arrow
