--- a/source/style/common/works.scss
+++ b/source/style/common/works.scss
@@ -19,6 +19,7 @@
 .c-accent-title {
   margin: 0px 90px;
   color: $main_color;
+  text-transform: uppercase;
   border-top: 1px solid $main_color;
   border-bottom: 1px solid $main_color;
   padding: 17px 0px;
