--- a/source/template/pages/works.pug
+++ b/source/template/pages/works.pug
@@ -35,11 +35,11 @@ block content
     .l-content
       .c-half-block.c-half-block_left.c-slider-description
         .c-slider-display
-          img.c-slider-main-image(src='/assets/img/slider/work-1.png')
+          img.c-slider-main-image
         .c-valign
-          .c-subtitle Сайт школы онлайн образования
-          .c-accent-title HTML, CSS, JAVASCRIPT
-          a.c-button
+          .c-subtitle
+          .c-accent-title
+          a.c-button(target='_blank')
             i.fa.fa-link(aria-hidden='true')
             | Посмотреть сайт
       .c-half-block.c-half-block_mbottom
