--- a/source/style/common/menu.scss
+++ b/source/style/common/menu.scss
@@ -44,6 +44,7 @@
         text-decoration: none;
         transition-duration: .3s;
         transform: scale(0,0);
+        opacity: 0;
         &:before,&:after {
           content: '';
           width: 0px;
